[package]
name = "jupyter2llm"
version = "0.1.0"
edition = "2021"
description = "Convert Jupyter notebooks to LLM-optimized text"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "jupyter2llm"
path = "src/main.rs"

[lib]
name = "jupyter2llm"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.3"